# AERSP_424_Final_Project

./: .gitignore  AERSP424_Final_Project_Visual.sln  AERSP424_Final_Project_Visual.vcxproj  AERSP424_Final_Project_Visual.vcxproj.filters  Board.cpp  Board.h  Body_Part.h  CMakeList.txt  CMakeLists.txt  Coin.h  Gambler.h  Idk.cpp  Play.cpp  Play_Slot.cpp  README.md  Snake.h  build.sh  glad.c  main.cpp  main_Snake.cpp
AERSP424.bac4ac4b/Debug/: vc143.idb
AERSP424.bac4ac4b/Debug/AERSP424.bac4ac4b.tlog/: AERSP424_Final_Project_Visual.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
AERSP424.bac4ac4b/x64/Debug/: AERSP424_Final_Project_Visual.exe.recipe  vc143.idb
AERSP424.bac4ac4b/x64/Debug/AERSP424.bac4ac4b.tlog/: AERSP424_Final_Project_Visual.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Header_Files/: Board.h  Body_Part.h  Card.h  Coin.h  Gambler.h  SlotMachine.h  Snake.h
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
Source_Files/: Play.cpp  Play_Slot.cpp  glad.c  stb.cpp
